--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include header.html %}
+{% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+<div class="container">
+    <div class="row profile">
+        <div class="col-md-9 col-sm-8">
+
+            <div class="page-content">
+                <div class="wrapper">
+                    {{ content }}
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-4">
+            {% include sidebar.html %}
+        </div>
     </div>
+</div>
 
-    {% include footer.html %}
-    {% include script.html %}
-  </body>
+{% include footer.html %}
+{% include script.html %}
+</body>
 
 </html>
