--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,13 +47,18 @@
 }
 
 .post-title {
-    font-size: 42px;
+    font-size: 36px;
     letter-spacing: -1px;
     line-height: 1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        font-size: 32px;
     }
+
+    @include media-query($on-palm) {
+      font-size: 28px;
+    }
+
 }
 
 .post-content {
