--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html>
 
-{% include head.html %}
+{% include m_head.html %}
 
-<body>
+<body class="blog_drawer">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
 
-{% include header.html %}
-
-<div class="container">
-    <div class="row profile">
-        <div class="col-md-9 col-sm-8">
-
-            <div class="page-content">
-                <div class="wrapper">
-                    {{ content }}
-                </div>
-            </div>
+    {% include m_header.html %}
+    <main class="mdl-layout__content">
+        <div class="content">
+            {{ content }}
         </div>
-        <div class="col-md-3 col-sm-4">
-            {% include sidebar.html %}
-        </div>
-    </div>
+    </main>
 </div>
 
-{% include footer.html %}
-{% include script.html %}
-</body>
 
+{% include m_script.html %}
+</body>
 </html>
