--- a/_layouts/post-by-tags.html
+++ b/_layouts/post-by-tags.html
@@ -1,38 +1,35 @@
 ---
 layout: default
 ---
-<header id="post-header">
-    <h1 id="post-title">{{site.data.tags[tag]}}</h1>
-</header>
-<div>
-    {% for post in site.tags[page.tag] %}
-    <div class="blog-short">
-        <h3><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h3>
 
-        <div>
+{% for post in site.tags[page.tag] %}
+{% if post.published %}
+    <div class="post-card mdl-card mdl-shadow--3dp">
+        <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text"><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h2>
+        </div>
+        <div class="mdl-card__supporting-text">
             <small>
                 <i class="fa fa-calendar"></i>
                 <time>
                     {{ post.date | date:'%A, %B %d, %Y'}}
                 </time>
             </small>
+            {{post.excerpt}}
         </div>
-        <div class="margin10">
-            <small>
-                <i class="fa fa-tag"></i>
-                {% for tag in post.tags %}
-                <span class="label label-tag"><a href="{{site.baseurl}}/tag/{{tag}}">{{site.data.tags[tag]}}</a></span>
-                {% endfor %}
-            </small>
+        <div class="mdl-card__actions mdl-card--border">
+            <i class="fa fa-tag"></i>
+            {% for tag in post.tags %}
+            <a href="{{site.baseurl}}/tag/{{tag}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--accent">
+                {{site.data.tags[tag]}}
+            </a>
+            {% endfor %}
         </div>
-        {% if post.thumbnail %}
-        <div class="imgcontainer col-xs-12 col-sm-4 col-md-3 col-lg-3">
-            <img src="{{post.thumbnail}}"
-                 alt="{{post.title}}" class="pull-left img-responsive thumb img-thumbnail"/>
+        <div class="mdl-card__menu">
+            <a href="{{post.url | prepend: site.baseurl}}" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+                <i class="material-icons">link</i>
+            </a>
         </div>
-        {% endif %}
-        <article class="excerpt">{{post.excerpt}}</article>
-        <a class="pull-right marginBottom10" href="{{post.url | prepend: site.baseurl }}">Read More</a>
     </div>
-    {% endfor %}
-</div>
+{% endif %}
+{% endfor %}
