Added google verification

--- a/_includes/m_head.html
+++ b/_includes/m_head.html
@@ -24,6 +24,8 @@
 
     <link rel="shortcut icon" href="images/favicon.png">
 
+    <meta name="google-site-verification" content="nbCCg01h4nG-_5FzOBQDcIlz4-rrxp804AsKcMeZrA0" />
+
     <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
     <!--
     <link rel="canonical" href="http://www.example.com/">
