--- a/_includes/m_header.html
+++ b/_includes/m_header.html
@@ -2,15 +2,15 @@
     <div class="mdl-layout__header-row">
         <span class="mdl-layout-title">{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</span>
         <div class="mdl-layout-spacer"></div>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
-            <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
-                <i class="material-icons">search</i>
-            </label>
-            <div class="mdl-textfield__expandable-holder">
-                <input class="mdl-textfield__input" type="text" id="search">
-                <label class="mdl-textfield__label" for="search">Enter your query...</label>
-            </div>
-        </div>
+        <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;expandable">-->
+            <!--<label class="mdl-button mdl-js-button mdl-button&#45;&#45;icon" for="search">-->
+                <!--<i class="material-icons">search</i>-->
+            <!--</label>-->
+            <!--<div class="mdl-textfield__expandable-holder">-->
+                <!--<input class="mdl-textfield__input" type="text" id="search">-->
+                <!--<label class="mdl-textfield__label" for="search">Enter your query...</label>-->
+            <!--</div>-->
+        <!--</div>-->
         <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
             <i class="material-icons">more_vert</i>
         </button>
